Updated page FEM ConstraintElectrostaticPotential/fr

--- a/wiki/fr/FEM_ConstraintElectrostaticPotential.html
+++ b/wiki/fr/FEM_ConstraintElectrostaticPotential.html
@@ -89,7 +89,7 @@
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FEM_ElectrostaticPotential_dialog.png&amp;filetimestamp=20260125143029&amp;.html" class="mw-file-description"><img src="../File/FEM_ElectrostaticPotential_dialog.png" decoding="async" width="489" height="616" class="mw-file-element" data-file-width="489" data-file-height="616"></a></span>
 </p>
 <ul><li><b>Condition aux limites</b>&nbsp;: permet de choisir entre le type de condition aux limites Dirichlet (potentiel prescrit) et Neumann (densit&eacute; de flux &eacute;lectrique prescrite). <span style="font-size:small;"><a href="../fr/Release_notes_1.1.html" title="Release notes 1.1/fr">introduit dans la version 1.1</a></span></li>
-<li><b>Potentiel</b>  Le potentiel &eacute;lectrique en V.</li>
+<li><b>Potentiel</b>&nbsp;: potentiel &eacute;lectrique en V.</li>
 <li><b>Potentiel &eacute;lectromagn&eacute;tique</b>&nbsp;: permet la saisie des composantes d'un champ vectoriel de potentiel.
 <ul><li><b>x/y/z</b>&nbsp;: partie r&eacute;elle/imaginaire du potentiel dans la direction x, y ou z en V. Pour les syst&egrave;mes de coordonn&eacute;es autres que le syst&egrave;me cart&eacute;sien 3D, il s'agira de la premi&egrave;re, deuxi&egrave;me ou troisi&egrave;me coordonn&eacute;e du syst&egrave;me au lieu de x, y ou z. Si le syst&egrave;me de coordonn&eacute;es n'a pas de troisi&egrave;me coordonn&eacute;e, z sera ignor&eacute;.</li>
 <li><b>Cases &agrave; cocher x, y, z</b>&nbsp;: pour d&eacute;clarer le potentiel correspondant comme inconnu pour le solveur.</li></ul></li>
@@ -150,12 +150,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126112455
+Cached time: 20260126112555
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.132 seconds
+CPU time usage: 0.085 seconds
+Real time usage: 0.169 seconds
 Preprocessor visited node count: 463/1000000
 Post&#8208;expand include size: 27279/2097152 bytes
 Template argument size: 10936/2097152 bytes
@@ -166,19 +166,19 @@ Unstrip post&#8208;expand size: 1827/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.933      1 -total
- 31.19%   10.272      1 Template:GuiCommandContainer
- 25.61%    8.433      1 Template:FEM_Tools_navi/fr
- 17.63%    5.806      2 Template:Navigation_menu_2
- 15.49%    5.102      1 Template:GuiCommandFemInfo/fr
- 13.15%    4.330      1 Template:Userdocnavi/fr
-  9.94%    3.275      2 Template:Docnav/fr
-  7.96%    2.623      1 Template:GuiCommand/fr
-  4.62%    1.521      1 Template:VersionMinus/fr
-  4.56%    1.502      7 Template:Version/fr
+100.00%   61.454      1 -total
+ 30.32%   18.630      1 Template:GuiCommandContainer
+ 20.54%   12.621      1 Template:FEM_Tools_navi/fr
+ 18.47%   11.351      1 Template:GuiCommandFemInfo/fr
+ 15.11%    9.285      1 Template:Userdocnavi/fr
+  9.98%    6.131      2 Template:Navigation_menu_2
+  9.60%    5.901      1 Template:MenuCommand
+  8.74%    5.369      5 Template:VersionPlus/fr
+  8.45%    5.190      2 Template:Docnav/fr
+  7.26%    4.462      1 Template:GuiCommand/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:140147-0!canonical and timestamp 20260126112454 and revision id 1744280. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:140147-0!canonical and timestamp 20260126112555 and revision id 1744282. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
