--- a/wiki/fr/Installing_on_Linux.html
+++ b/wiki/fr/Installing_on_Linux.html
@@ -1,13 +1,13 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Installing on Linux/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Installing+on+Linux&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/id (0% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><a href="../de/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="Installation unter Linux (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--complete" title="Installation unter Linux (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Installing_on_Linux.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Installing on Linux (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Linux'te kurulum (1% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="Instalaci&oacute;n en Linux (89% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../hr/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/hr (0% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="Installare in Linux (91% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="Instalacja w systemie Linux (99% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--complete" title="Instalacja w systemie Linux (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/pt (0% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="Instalando no Linux (82% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/ro (0% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -134,10 +134,8 @@
 </pre></div>
 <div class="mw-collapsible mw-collapsed toccolours">
 <h2><span class="mw-headline" id="OpenSUSE">OpenSUSE</span></h2>
-<div class="mw-translate-fuzzy">
-<p>FreeCAD est g&eacute;n&eacute;ralement install&eacute; avec YAST (Yet another Setup Tool), l&rsquo;outil de configuration et de configuration du syst&egrave;me d&rsquo;exploitation Linux, ou dans n&rsquo;importe quel terminal/console (les droits en mode root sont requis) avec&nbsp;:
+<p>FreeCAD peut &ecirc;tre install&eacute; avec Myrlyn (qui a remplac&eacute; YAST en septembre 2025), ou dans n'importe quel terminal/console (les droits en mode root sont requis) avec&nbsp;:
 </p>
-</div>
 <dl><dd><div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">zypper</span> <span class="n">install</span> <span class="n">FreeCAD</span>
 </pre></div></dd></dl>
 <p><i>Remarque&nbsp;:</i> cette proc&eacute;dure ne couvre que l'installation des versions du programme FreeCAD <b>stables</b> officiellement publi&eacute;es en fonction des liens install&eacute;s vers les d&eacute;p&ocirc;ts de packages de programmes de votre version de syst&egrave;me d'exploitation. Le package openSUSE <i>peut &ecirc;tre obsol&egrave;te</i> car le package peut &ecirc;tre en retard sur le dernier code source stable. Dans ce cas, il est sugg&eacute;r&eacute; d'installer le package manuellement &agrave; partir des d&eacute;p&ocirc;ts sources indiqu&eacute;s ci-dessous (<i>D&eacute;velopper</i>).
@@ -243,35 +241,35 @@ disponibles &agrave; partir du d&eacute;p&ocirc;t github. Elles ont &eacute;gale
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125103638
+Cached time: 20260126112659
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.111 seconds
-Preprocessor visited node count: 609/1000000
+CPU time usage: 0.098 seconds
+Real time usage: 0.141 seconds
+Preprocessor visited node count: 608/1000000
 Post&#8208;expand include size: 10101/2097152 bytes
 Template argument size: 3798/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 18/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 12828/5000000 bytes
+Unstrip post&#8208;expand size: 12842/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.735      1 -total
- 21.36%    5.710     18 Template:Code
- 17.19%    4.596      1 Template:Userdocnavi/fr
-  9.95%    2.661     13 Template:Incode
-  9.73%    2.600      2 Template:Docnav/fr
-  8.81%    2.356      7 Template:Emphasis
-  8.57%    2.290      1 Template:Navigation_menu_2
-  7.81%    2.089      1 Template:KEY
-  5.14%    1.373      1 Template:TOCright
-  5.00%    1.338      1 Template:Button
+100.00%   23.094      1 -total
+ 23.74%    5.481     18 Template:Code
+ 19.48%    4.498      1 Template:Userdocnavi/fr
+ 10.07%    2.326      2 Template:Docnav/fr
+ 10.05%    2.321      1 Template:Navigation_menu_2
+  8.50%    1.963      1 Template:KEY
+  6.93%    1.600     13 Template:Incode
+  5.61%    1.296      7 Template:Emphasis
+  4.74%    1.094      1 Template:TOCright
+  4.47%    1.033      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199861-0!canonical and timestamp 20260125103637 and revision id 1743670. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199861-0!canonical and timestamp 20260126112659 and revision id 1744284. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
