--- a/wiki/it/Macros_recipes.html
+++ b/wiki/it/Macros_recipes.html
@@ -31,9 +31,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Screen_Wiki.png&amp;filetimestamp=20200321195325&amp;.html" class="mw-file-description"><img src="../File/Macro_Screen_Wiki.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Screen_Wiki.html" title="Macro Screen Wiki/it">Macro Screen Wiki</a></span>: Questa macro consente di salvare la Vista 3D nel formato desiderato. La Vista 3D o la finestra 3D completa di FreeCAD assume le dimensioni desiderate.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Snip.png&amp;filetimestamp=20190803232007&amp;.html" class="mw-file-description"><img src="../File/Snip.png" decoding="async" width="24" height="23" class="mw-file-element" data-file-width="44" data-file-height="42"></a></span> <a href="../it/Macro_Snip.html" title="Macro Snip/it">Macro Snip</a></span>: Pubblica facilmente screenshot sul forum di FreeCAD.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_View_Rotation.png&amp;filetimestamp=20190607123811&amp;.html" class="mw-file-description"><img src="../File/Macro_View_Rotation.png" decoding="async" width="24" height="25" class="mw-file-element" data-file-width="65" data-file-height="69"></a></span> <a href="../it/Macro_View_Rotation.html" title="Macro View Rotation/it">Macro View Rotation</a></span>: fornisce un'interfaccia utente grafica per consentire la rotazione della vista in base a quantit&agrave; precise in tutte e tre le direzioni.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Zoom1_1.svg&amp;filetimestamp=20211110015917&amp;.html" class="mw-file-description"><img src="../File/Zoom1_1.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Zoom1_1.html" title="Macro Zoom1 1">Macro Zoom 1:1</a></span>: 1:1 Zoom so objects appear their actual size on the screen.</li></ul>
-</div>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Zoom1_1.svg&amp;filetimestamp=20211110015917&amp;.html" class="mw-file-description"><img src="../File/Zoom1_1.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Macro_Zoom1_1/it&amp;action=edit&amp;redlink=1.html" class="new" title="Macro Zoom1 1/it (page does not exist)">Macro Zoom 1:1</a></span>: Zoom 1:1: gli oggetti appaiono sullo schermo nelle loro dimensioni reali.</li></ul>
 </div>
 </div>
 <div class="toccolours mw-collapsible mw-collapsed">
@@ -880,15 +878,15 @@
 <li>Nella scheda <b>Barra degli strumenti</b>, creare una nuova barra degli strumenti e aggiungere la macro, prendendola dalla categoria <b>Macros</b>.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260126122448
+Cached time: 20260126122526
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.591 seconds
-Real time usage: 1.354 seconds
-Preprocessor visited node count: 3089/1000000
-Post&#8208;expand include size: 27109/2097152 bytes
-Template argument size: 14487/2097152 bytes
+CPU time usage: 0.575 seconds
+Real time usage: 1.690 seconds
+Preprocessor visited node count: 3088/1000000
+Post&#8208;expand include size: 27112/2097152 bytes
+Template argument size: 14490/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -896,14 +894,14 @@ Unstrip post&#8208;expand size: 1952/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   55.592      1 -total
- 62.92%   34.978    219 Template:MacroLink
-  6.68%    3.716      3 Template:Button
-  4.74%    2.633      1 Template:TOCright
-  2.32%    1.290      6 Template:MenuCommand
+100.00%   38.020      1 -total
+ 42.56%   16.182    219 Template:MacroLink
+ 13.70%    5.208      1 Template:TOCright
+  5.06%    1.922      6 Template:MenuCommand
+  3.50%    1.329      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126122448 and revision id 1744288. Rendering was triggered because: unknown
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126122524 and revision id 1744290. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
