--- a/wiki/it/Macros_recipes.html
+++ b/wiki/it/Macros_recipes.html
@@ -40,9 +40,7 @@
 <h3><span class="mw-headline" id="Animazioni"><span typeof="mw:File"><a href="../index.php?title=Draft_FlipDimension.svg&amp;filetimestamp=20210319101635&amp;.html" class="mw-file-description"><img src="../File/Draft_FlipDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Animazioni</span></h3>
 <div class="mw-collapsible-content">
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Animated_Constrain.png&amp;filetimestamp=20190613184657&amp;.html" class="mw-file-description"><img src="../File/Macro_Animated_Constrain.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Animated_Constrain.html" title="Macro Animated Constrain">Macro Animated Constrain</a></span>: Anima il vincolo angolare in Sketcher.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Animator.svg&amp;filetimestamp=20211029033522&amp;.html" class="mw-file-description"><img src="../File/Animator.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Animator.html" title="Macro Animator">Macro Animator</a></span>: Animate your model by animating its properties with this feature Python object.</li></ul>
-</div>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Animator.svg&amp;filetimestamp=20211029033522&amp;.html" class="mw-file-description"><img src="../File/Animator.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Animator.html" title="Macro Animator/it">Macro Animator</a></span>: anima il modello variandone le propriet&agrave; con questo oggetto Python.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Assemblage_Imprimante_3D.png&amp;filetimestamp=20190614143042&amp;.html" class="mw-file-description"><img src="../File/Macro_Assemblage_Imprimante_3D.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Assemblage_Imprimante_3D.html" title="Macro Assemblage Imprimante 3D">Macro Assemblage Imprimante 3D</a></span>: Simulation of movements of a 3D printer.</li></ul>
 </div>
@@ -876,15 +874,15 @@
 <li>Nella scheda <b>Barra degli strumenti</b>, creare una nuova barra degli strumenti e aggiungere la macro, prendendola dalla categoria <b>Macros</b>.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260126122546
+Cached time: 20260126122636
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.548 seconds
-Real time usage: 0.795 seconds
-Preprocessor visited node count: 3087/1000000
-Post&#8208;expand include size: 27112/2097152 bytes
-Template argument size: 14490/2097152 bytes
+CPU time usage: 0.527 seconds
+Real time usage: 0.698 seconds
+Preprocessor visited node count: 3086/1000000
+Post&#8208;expand include size: 27115/2097152 bytes
+Template argument size: 14493/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -892,14 +890,14 @@ Unstrip post&#8208;expand size: 1952/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.526      1 -total
- 41.59%   13.112    219 Template:MacroLink
-  7.48%    2.357      6 Template:MenuCommand
-  7.38%    2.328      3 Template:Button
-  4.99%    1.572      1 Template:TOCright
+100.00%   32.041      1 -total
+ 41.45%   13.280    219 Template:MacroLink
+  8.68%    2.782      6 Template:MenuCommand
+  5.18%    1.659      3 Template:Button
+  4.07%    1.304      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126122545 and revision id 1744292. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126122635 and revision id 1744294. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
