--- a/wiki/it/Macros_recipes.html
+++ b/wiki/it/Macros_recipes.html
@@ -42,9 +42,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Animated_Constrain.png&amp;filetimestamp=20190613184657&amp;.html" class="mw-file-description"><img src="../File/Macro_Animated_Constrain.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Animated_Constrain.html" title="Macro Animated Constrain/it">Macro Animated Constrain</a></span>: Anima il vincolo angolare in Sketcher.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Animator.svg&amp;filetimestamp=20211029033522&amp;.html" class="mw-file-description"><img src="../File/Animator.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Animator.html" title="Macro Animator/it">Macro Animator</a></span>: anima il modello variandone le propriet&agrave; con questo oggetto Python.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Assemblage_Imprimante_3D.png&amp;filetimestamp=20190614143042&amp;.html" class="mw-file-description"><img src="../File/Macro_Assemblage_Imprimante_3D.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Assemblage_Imprimante_3D.html" title="Macro Assemblage Imprimante 3D/it">Macro Assemblage Imprimante 3D</a></span>: Simulazione dei movimenti di una stampante 3D.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Assembly.png&amp;filetimestamp=20190613181057&amp;.html" class="mw-file-description"><img src="../File/Macro_Assembly.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Assembly.html" title="Macro Assembly">Macro Assembly</a></span>: Assembly animate.</li></ul>
-</div>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Assembly.png&amp;filetimestamp=20190613181057&amp;.html" class="mw-file-description"><img src="../File/Macro_Assembly.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Assembly.html" title="Macro Assembly/it">Macro Assembly</a></span>: anima Assembly.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Constraint_Draft.png&amp;filetimestamp=20190614144019&amp;.html" class="mw-file-description"><img src="../File/Macro_Constraint_Draft.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Constraint_Draft.html" title="Macro Constraint Draft">Macro Constraint Draft</a></span>: Simple example animation Draft wires by use the Expressions for associate many wires and simulate or verify the movement. Here the circle rotation create the movement for all objects connected (This macro run with FreeCAD version 0.16).</li></ul>
 </div>
@@ -872,15 +870,15 @@
 <li>Nella scheda <b>Barra degli strumenti</b>, creare una nuova barra degli strumenti e aggiungere la macro, prendendola dalla categoria <b>Macros</b>.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260126122716
+Cached time: 20260126122742
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.532 seconds
-Real time usage: 0.747 seconds
-Preprocessor visited node count: 3085/1000000
-Post&#8208;expand include size: 27121/2097152 bytes
-Template argument size: 14499/2097152 bytes
+CPU time usage: 0.508 seconds
+Real time usage: 0.720 seconds
+Preprocessor visited node count: 3084/1000000
+Post&#8208;expand include size: 27124/2097152 bytes
+Template argument size: 14502/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -888,14 +886,14 @@ Unstrip post&#8208;expand size: 1952/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.228      1 -total
- 43.72%   11.468    219 Template:MacroLink
-  7.93%    2.080      6 Template:MenuCommand
-  5.30%    1.389      3 Template:Button
-  4.14%    1.086      1 Template:TOCright
+100.00%   26.291      1 -total
+ 44.23%   11.629    219 Template:MacroLink
+  6.27%    1.648      6 Template:MenuCommand
+  4.59%    1.206      1 Template:TOCright
+  4.01%    1.053      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126122715 and revision id 1744298. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126122741 and revision id 1744300. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
