Created page with "* {{MacroLink|Icon=Macro_hinge.png|Macro_hinge/it|Macro hinge}}: Apre e chiude una cerniera."

--- a/wiki/it/Macros_recipes.html
+++ b/wiki/it/Macros_recipes.html
@@ -45,9 +45,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Assembly.png&amp;filetimestamp=20190613181057&amp;.html" class="mw-file-description"><img src="../File/Macro_Assembly.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Assembly.html" title="Macro Assembly/it">Macro Assembly</a></span>: anima Assembly.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Constraint_Draft.png&amp;filetimestamp=20190614144019&amp;.html" class="mw-file-description"><img src="../File/Macro_Constraint_Draft.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Constraint_Draft.html" title="Macro Constraint Draft">Macro Constraint Draft</a></span>: Semplice esempio di animazione. Disegna le polilinee utilizzando le espressioni per associare pi&ugrave; polilinee e simulare o verificare il movimento. Qui la rotazione del cerchio crea il movimento per tutti gli oggetti connessi (questa macro funziona con FreeCAD versione 0.16).</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_crank_simul.png&amp;filetimestamp=20190613154140&amp;.html" class="mw-file-description"><img src="../File/Macro_crank_simul.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_crank_simul.html" title="Macro crank simul/it">Macro crank simul</a></span>: Pistone e manovella in rotazione.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_hinge.png&amp;filetimestamp=20190613174139&amp;.html" class="mw-file-description"><img src="../File/Macro_hinge.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_hinge.html" title="Macro hinge">Macro hinge</a></span>: Open and close hinge.</li></ul>
-</div>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_hinge.png&amp;filetimestamp=20190613174139&amp;.html" class="mw-file-description"><img src="../File/Macro_hinge.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_hinge.html" title="Macro hinge/it">Macro hinge</a></span>: Apre e chiude una cerniera.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Spring.png&amp;filetimestamp=20190613170136&amp;.html" class="mw-file-description"><img src="../File/Macro_Spring.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Spring.html" title="Macro Spring">Macro Spring</a></span>: Simulation of one spring.</li></ul>
 </div>
@@ -866,15 +864,15 @@
 <li>Nella scheda <b>Barra degli strumenti</b>, creare una nuova barra degli strumenti e aggiungere la macro, prendendola dalla categoria <b>Macros</b>.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260126123648
+Cached time: 20260126123746
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.642 seconds
-Real time usage: 1.240 seconds
-Preprocessor visited node count: 3082/1000000
-Post&#8208;expand include size: 27127/2097152 bytes
-Template argument size: 14505/2097152 bytes
+CPU time usage: 0.657 seconds
+Real time usage: 0.987 seconds
+Preprocessor visited node count: 3081/1000000
+Post&#8208;expand include size: 27130/2097152 bytes
+Template argument size: 14508/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -882,14 +880,14 @@ Unstrip post&#8208;expand size: 1952/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.909      1 -total
- 40.17%   15.631    219 Template:MacroLink
- 11.61%    4.519      6 Template:MenuCommand
-  7.74%    3.012      1 Template:TOCright
-  7.11%    2.766      3 Template:Button
+100.00%   39.152      1 -total
+ 43.93%   17.200    219 Template:MacroLink
+  6.40%    2.506      6 Template:MenuCommand
+  4.86%    1.903      1 Template:TOCright
+  4.71%    1.843      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126123646 and revision id 1744304. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126123745 and revision id 1744306. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
