--- a/wiki/it/Macros_recipes.html
+++ b/wiki/it/Macros_recipes.html
@@ -43,7 +43,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Animator.svg&amp;filetimestamp=20211029033522&amp;.html" class="mw-file-description"><img src="../File/Animator.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Animator.html" title="Macro Animator/it">Macro Animator</a></span>: anima il modello variandone le propriet&agrave; con questo oggetto Python.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Assemblage_Imprimante_3D.png&amp;filetimestamp=20190614143042&amp;.html" class="mw-file-description"><img src="../File/Macro_Assemblage_Imprimante_3D.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Assemblage_Imprimante_3D.html" title="Macro Assemblage Imprimante 3D/it">Macro Assemblage Imprimante 3D</a></span>: Simulazione dei movimenti di una stampante 3D.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Assembly.png&amp;filetimestamp=20190613181057&amp;.html" class="mw-file-description"><img src="../File/Macro_Assembly.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Assembly.html" title="Macro Assembly/it">Macro Assembly</a></span>: anima Assembly.</li></ul>
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Constraint_Draft.png&amp;filetimestamp=20190614144019&amp;.html" class="mw-file-description"><img src="../File/Macro_Constraint_Draft.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Constraint_Draft.html" title="Macro Constraint Draft">Macro Constraint Draft</a></span>: Semplice esempio di animazione. Disegna le polilinee utilizzando le espressioni per associare pi&ugrave; polilinee e simulare o verificare il movimento. Qui la rotazione del cerchio crea il movimento per tutti gli oggetti connessi (questa macro funziona con FreeCAD versione 0.16).</li></ul>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Constraint_Draft.png&amp;filetimestamp=20190614144019&amp;.html" class="mw-file-description"><img src="../File/Macro_Constraint_Draft.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Constraint_Draft.html" title="Macro Constraint Draft/it">Macro Constraint Draft</a></span>: Semplice esempio di animazione. Disegna le polilinee utilizzando le espressioni per associare pi&ugrave; polilinee e simulare o verificare il movimento. Qui la rotazione del cerchio crea il movimento per tutti gli oggetti connessi (questa macro funziona con FreeCAD versione 0.16).</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_crank_simul.png&amp;filetimestamp=20190613154140&amp;.html" class="mw-file-description"><img src="../File/Macro_crank_simul.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_crank_simul.html" title="Macro crank simul/it">Macro crank simul</a></span>: Pistone e manovella in rotazione.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_hinge.png&amp;filetimestamp=20190613174139&amp;.html" class="mw-file-description"><img src="../File/Macro_hinge.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_hinge.html" title="Macro hinge/it">Macro hinge</a></span>: Apre e chiude una cerniera.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -864,15 +864,15 @@
 <li>Nella scheda <b>Barra degli strumenti</b>, creare una nuova barra degli strumenti e aggiungere la macro, prendendola dalla categoria <b>Macros</b>.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260126123746
+Cached time: 20260126123810
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.657 seconds
-Real time usage: 0.987 seconds
+CPU time usage: 0.510 seconds
+Real time usage: 0.692 seconds
 Preprocessor visited node count: 3081/1000000
-Post&#8208;expand include size: 27130/2097152 bytes
-Template argument size: 14508/2097152 bytes
+Post&#8208;expand include size: 27133/2097152 bytes
+Template argument size: 14511/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -880,14 +880,14 @@ Unstrip post&#8208;expand size: 1952/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.152      1 -total
- 43.93%   17.200    219 Template:MacroLink
-  6.40%    2.506      6 Template:MenuCommand
-  4.86%    1.903      1 Template:TOCright
-  4.71%    1.843      3 Template:Button
+100.00%   30.549      1 -total
+ 40.25%   12.297    219 Template:MacroLink
+  7.90%    2.412      6 Template:MenuCommand
+  7.69%    2.348      1 Template:TOCright
+  4.78%    1.460      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126123745 and revision id 1744306. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126123809 and revision id 1744308. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
