Created page with "Тази страница е актуализирана за версия 1.0."

--- a/wiki/bg/Preferences_Editor.html
+++ b/wiki/bg/Preferences_Editor.html
@@ -42,7 +42,7 @@
 </div>
 <p>&#1053;&#1072;&#1090;&#1080;&#1089;&#1082;&#1072;&#1085;&#1077;&#1090;&#1086; &#1085;&#1072; &#1073;&#1091;&#1090;&#1086;&#1085;&#1072; <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Reset</span> &#1074; &#1076;&#1086;&#1083;&#1085;&#1080;&#1103; &#1083;&#1103;&#1074; &#1098;&#1075;&#1098;&#1083; &#1085;&#1072; &#1076;&#1080;&#1072;&#1083;&#1086;&#1075;&#1086;&#1074;&#1080;&#1103; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094; &#1055;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103; &#1086;&#1090;&#1074;&#1072;&#1088;&#1103; &#1084;&#1077;&#1085;&#1102; (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>) &#1089; &#1086;&#1087;&#1094;&#1080;&#1080; &#1079;&#1072; &#1085;&#1091;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;&#1090;&#1072; &#1082;&#1098;&#1084; &#1090;&#1077;&#1093;&#1085;&#1080;&#1090;&#1077; &#1089;&#1090;&#1086;&#1081;&#1085;&#1086;&#1089;&#1090;&#1080; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;. &#1052;&#1086;&#1078;&#1077;&#1090;&#1077; &#1076;&#1072; &#1085;&#1091;&#1083;&#1080;&#1088;&#1072;&#1090;&#1077; &#1090;&#1077;&#1082;&#1091;&#1097;&#1072;&#1090;&#1072; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072;, &#1090;&#1077;&#1082;&#1091;&#1097;&#1072;&#1090;&#1072; &#1075;&#1088;&#1091;&#1087;&#1072; &#1080;&#1083;&#1080; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;. &#1042; <span style="font-size:small;color:blue;">0.21 and below</span> &#1073;&#1091;&#1090;&#1086;&#1085;&#1098;&#1090; &#1097;&#1077; &#1085;&#1091;&#1083;&#1080;&#1088;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080;  <b>all</b> &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;.
 </p><p>Some advanced preferences can only be changed in the <a href="../Std_DlgParameter.html" title="Std DlgParameter">Parameter editor</a>. The <a href="../Fine-tuning.html" title="Fine-tuning">Fine-tuning</a> page lists some of them.
-</p><p>This page has been updated for version 1.0.
+</p><p>&#1058;&#1072;&#1079;&#1080; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072; &#1077; &#1072;&#1082;&#1090;&#1091;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1072; &#1079;&#1072; &#1074;&#1077;&#1088;&#1089;&#1080;&#1103; 1.0.
 </p><p><span id="General"></span>
 </p>
 <div class="mw-translate-fuzzy">
@@ -1250,12 +1250,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126134134
+Cached time: 20260126134203
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.212 seconds
-Real time usage: 0.316 seconds
+CPU time usage: 0.263 seconds
+Real time usage: 0.356 seconds
 Preprocessor visited node count: 2474/1000000
 Post&#8208;expand include size: 24829/2097152 bytes
 Template argument size: 8113/2097152 bytes
@@ -1266,19 +1266,19 @@ Unstrip post&#8208;expand size: 4109/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   60.239      1 -total
- 13.77%    8.297    228 Template:MenuCommand
- 13.73%    8.273      1 Template:Userdocnavi/bg
- 10.32%    6.218      3 Template:PropertyView
-  9.99%    6.018     11 Template:Value
-  5.08%    3.058      1 Template:Navigation_menu_2
-  4.51%    2.719      3 Template:Variable
-  4.37%    2.630     42 Template:Version
-  3.91%    2.355      1 Template:FALSE
-  3.85%    2.321      2 Template:Docnav
+100.00%   59.256      1 -total
+ 13.56%    8.038    228 Template:MenuCommand
+ 13.19%    7.814      1 Template:Userdocnavi/bg
+  9.40%    5.568      3 Template:PropertyView
+  8.56%    5.073     11 Template:Value
+  4.86%    2.878     42 Template:Version
+  4.69%    2.778      3 Template:Variable
+  4.60%    2.726      1 Template:Navigation_menu_2
+  4.06%    2.406      2 Template:Docnav
+  4.02%    2.379      9 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126134133 and revision id 1744320. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126134203 and revision id 1744322. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
