Updated page Preferences Editor/bg

--- a/wiki/bg/Preferences_Editor.html
+++ b/wiki/bg/Preferences_Editor.html
@@ -42,11 +42,8 @@
 </p><p><span id="General"></span>
 </p>
 <h2><span id=".D0.9E.D0.B1.D1.89.D0.B8_.D0.BD.D0.B0.D1.81.D1.82.D1.80.D0.BE.D0.B9.D0.BA.D0.B8"></span><span class="mw-headline" id="&#1054;&#1073;&#1097;&#1080;_&#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080;">&#1054;&#1073;&#1097;&#1080; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080;</span></h2>
-<div class="mw-translate-fuzzy">
-<p>&#1050;&#1086;&#1075;&#1072;&#1090;&#1086; &#1079;&#1072;&#1088;&#1077;&#1076;&#1080;&#1090;&#1077; FreeCAD &#1074; &#1085;&#1072;&#1095;&#1072;&#1083;&#1086;&#1090;&#1086;, &#1080; &#1085;&#1077; &#1089;&#1090;&#1077; &#1086;&#1090;&#1074;&#1086;&#1088;&#1080;&#1083;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1077;&#1085; &#1087;&#1083;&#1086;&#1090; &#1074;&#1089;&#1077; &#1086;&#1097;&#1077;, &#1090;&#1086; &#1097;&#1077; &#1080;&#1084;&#1072;&#1090;&#1077; &#1084;&#1080;&#1085;&#1080;&#1084;&#1072;&#1083;&#1077;&#1085; &#1073;&#1088;&#1086;&#1080; &#1089;&#1077;&#1082;&#1094;&#1080;&#1080; &#1079;&#1072; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080; &#1074; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094;&#1072; &#1085;&#1072; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080;&#1090;&#1077;. &#1050;&#1072;&#1090;&#1086; &#1079;&#1072;&#1087;&#1086;&#1095;&#1085;&#1077;&#1090;&#1077; &#1076;&#1072; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1090;&#1077; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1084;&#1086;&#1076;&#1091;&#1083;&#1080;/&#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1087;&#1083;&#1086;&#1090;&#1086;&#1074;&#1077;, &#1085;&#1086;&#1074;&#1080; &#1089;&#1077;&#1082;&#1094;&#1080;&#1080; &#1097;&#1077; &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072;&#1090; &#1074; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094;&#1072; &#1085;&#1072; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080;&#1090;&#1077;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1097;&#1077; &#1074;&#1080; &#1088;&#1072;&#1079;&#1088;&#1077;&#1096;&#1072;&#1074;&#1072;&#1090; &#1076;&#1072; &#1082;&#1086;&#1085;&#1092;&#1080;&#1075;&#1091;&#1088;&#1080;&#1088;&#1072;&#1090;&#1077; &#1087;&#1086;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;&#1090;&#1086; &#1085;&#1072; &#1074;&#1089;&#1077;&#1082;&#1080; &#1085;&#1086;&#1074;&#1086;&#1079;&#1072;&#1088;&#1077;&#1076;&#1077;&#1085; &#1088;&#1072;&#1073;&#1086;&#1090;&#1077;&#1085; &#1087;&#1083;&#1086;&#1090;.
-</p>
-</div>
-<p>In <span style="font-size:small;color:blue;">0.21 and below</span> the seventh page, Help, is only available if the <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-Help">Help Addon</a> has been <a href="../Std_AddonMgr.html" title="Std AddonMgr">installed</a>.
+<p>&#1058;&#1072;&#1079;&#1080; &#1075;&#1088;&#1091;&#1087;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103; &#1080;&#1084;&#1072; &#1089;&#1077;&#1076;&#1077;&#1084; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1080;: &#1054;&#1073;&#1097;&#1080;, &#1044;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;, &#1048;&#1079;&#1073;&#1086;&#1088;, &#1050;&#1077;&#1096;, &#1054;&#1073;&#1083;&#1072;&#1089;&#1090; &#1079;&#1072; &#1080;&#1079;&#1074;&#1077;&#1089;&#1090;&#1080;&#1103;, &#1048;&#1079;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1086;&#1090;&#1095;&#1077;&#1090; &#1080; &#1055;&#1086;&#1084;&#1086;&#1097;.
+</p><p>In <span style="font-size:small;color:blue;">0.21 and below</span> the seventh page, Help, is only available if the <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-Help">Help Addon</a> has been <a href="../Std_AddonMgr.html" title="Std AddonMgr">installed</a>.
 </p>
 <h3><span class="mw-headline" id="General">General</span></h3>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_General_Page_General.png&amp;filetimestamp=20240720115445&amp;.html" class="mw-file-description"><img src="../File/Preferences_General_Page_General.png" decoding="async" width="400" height="397" class="mw-file-element" data-file-width="600" data-file-height="595"></a></span>
@@ -1244,13 +1241,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126134554
+Cached time: 20260126134713
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.212 seconds
-Real time usage: 0.440 seconds
-Preprocessor visited node count: 2478/1000000
+CPU time usage: 0.239 seconds
+Real time usage: 0.308 seconds
+Preprocessor visited node count: 2477/1000000
 Post&#8208;expand include size: 24829/2097152 bytes
 Template argument size: 8113/2097152 bytes
 Highest expansion depth: 7/100
@@ -1260,19 +1257,19 @@ Unstrip post&#8208;expand size: 4109/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  142.758      1 -total
- 14.70%   20.985      3 Template:PropertyView
- 12.45%   17.776    228 Template:MenuCommand
- 12.42%   17.736      1 Template:Userdocnavi/bg
- 11.83%   16.882     11 Template:Value
-  4.38%    6.253      2 Template:Docnav
-  4.35%    6.208      1 Template:Navigation_menu_2
-  3.99%    5.699     42 Template:Version
-  2.82%    4.021      3 Template:Variable
-  2.73%    3.901     15 Template:FileName
+100.00%   62.800      1 -total
+ 15.18%    9.536    228 Template:MenuCommand
+ 10.86%    6.818      1 Template:Userdocnavi/bg
+  7.80%    4.898      3 Template:PropertyView
+  7.42%    4.659     11 Template:Value
+  6.59%    4.141     42 Template:Version
+  6.16%    3.868      1 Template:TOCright
+  4.48%    2.816      2 Template:Docnav
+  4.25%    2.671      3 Template:Variable
+  4.06%    2.552     15 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126134554 and revision id 1744330. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126134713 and revision id 1744334. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
