--- a/wiki/it/FreeCAD_Manual_Converter.html
+++ b/wiki/it/FreeCAD_Manual_Converter.html
@@ -115,10 +115,8 @@ FreeCAD Manual Converter
 <span class="n">sudo</span> <span class="n">apt</span><span class="o">-</span><span class="n">get</span> <span class="n">install</span> <span class="o">-</span><span class="n">y</span> <span class="n">python3</span><span class="o">-</span><span class="n">pip</span> <span class="n">python3</span><span class="o">-</span><span class="n">dev</span> <span class="n">python3</span><span class="o">-</span><span class="n">cairo</span> <span class="n">python3</span><span class="o">-</span><span class="n">gi</span><span class="o">-</span><span class="n">cairo</span>
 <span class="n">sudo</span> <span class="n">apt</span><span class="o">-</span><span class="n">get</span> <span class="n">install</span> <span class="o">-</span><span class="n">y</span> <span class="n">libcairo2</span><span class="o">-</span><span class="n">dev</span> <span class="n">libpango1</span><span class="mf">.0</span><span class="o">-</span><span class="n">dev</span> <span class="n">libgdk</span><span class="o">-</span><span class="n">pixbuf2</span><span class="mf">.0</span><span class="o">-</span><span class="n">dev</span> <span class="n">libffi</span><span class="o">-</span><span class="n">dev</span> <span class="n">shared</span><span class="o">-</span><span class="n">mime</span><span class="o">-</span><span class="n">info</span>
 </pre></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>and
+<p>e
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">pip3</span> <span class="n">install</span> <span class="n">requests</span> <span class="n">weasyprint</span> <span class="n">beautifulsoup4</span> <span class="n">PyPDF2</span> <span class="n">Pillow</span> <span class="n">cairosvg</span> <span class="n">ebooklib</span>
 </pre></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -645,13 +643,13 @@ if __name__ == "__main__":
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126135159
+Cached time: 20260126135204
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.102 seconds
-Preprocessor visited node count: 154/1000000
+CPU time usage: 0.076 seconds
+Real time usage: 0.081 seconds
+Preprocessor visited node count: 153/1000000
 Post&#8208;expand include size: 2446/2097152 bytes
 Template argument size: 631/2097152 bytes
 Highest expansion depth: 7/100
@@ -661,13 +659,13 @@ Unstrip post&#8208;expand size: 21462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.385      1 -total
- 55.11%   15.093      1 Template:MacroCode
- 32.01%    8.766      1 Template:Macro
- 11.68%    3.199      3 Template:Code
+100.00%    8.961      1 -total
+ 39.98%    3.583      1 Template:Macro
+ 33.76%    3.025      3 Template:Code
+ 21.42%    1.919      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135159 and revision id 1744350. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135204 and revision id 1744352. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
