Created page with "Il [[Manuale:Introduzione/it|Manuale di FreeCAD]] è un documento vivo, in continua evoluzione grazie ai contributi dei membri della comunità. Sebbene ciò lo renda un'eccellente risorsa aggiornata, a volte gli utenti hanno bisogno di accedere al manuale offline o preferiscono leggerlo su e-reader e tablet. Questo script colma questa lacuna consentendo agli utenti di:"

--- a/wiki/it/FreeCAD_Manual_Converter.html
+++ b/wiki/it/FreeCAD_Manual_Converter.html
@@ -80,10 +80,8 @@ FreeCAD Manual Converter
 <p>FreeCAD Manual Converter &egrave; uno script Python che genera automaticamente le versioni PDF ed EPUB del manuale di FreeCAD dal Wiki di FreeCAD. Crea un manuale offline completo e correttamente formattato, che include tutti i capitoli, le immagini e la formattazione del manuale online.
 </p>
 <h3><span class="mw-headline" id="Background">Background</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The <a href="../Manual;Introduction.html" title="Manual:Introduction">FreeCAD Manual</a> is a living document that continuously evolves thanks to the contributions of community members. While this makes it an excellent up-to-date resource, there are times when users need offline access to the manual or prefer to read it on e-readers and tablets. This script bridges that gap by allowing users to:
+<p>Il <a href="../index.php?title=Manuale;Introduzione/it&amp;action=edit&amp;redlink=1.html" class="new" title="Manuale:Introduzione/it (page does not exist)">Manuale di FreeCAD</a> &egrave; un documento vivo, in continua evoluzione grazie ai contributi dei membri della comunit&agrave;. Sebbene ci&ograve; lo renda un'eccellente risorsa aggiornata, a volte gli utenti hanno bisogno di accedere al manuale offline o preferiscono leggerlo su e-reader e tablet. Questo script colma questa lacuna consentendo agli utenti di:
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>Generate an up-to-date offline copy of the manual at any time</li>
 <li>Create both PDF and EPUB formats for different reading preferences</li>
@@ -637,13 +635,13 @@ if __name__ == "__main__":
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126135249
+Cached time: 20260126135317
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.136 seconds
-Preprocessor visited node count: 150/1000000
+CPU time usage: 0.034 seconds
+Real time usage: 0.049 seconds
+Preprocessor visited node count: 149/1000000
 Post&#8208;expand include size: 2446/2097152 bytes
 Template argument size: 631/2097152 bytes
 Highest expansion depth: 7/100
@@ -653,13 +651,13 @@ Unstrip post&#8208;expand size: 21462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.649      1 -total
- 56.09%   22.239      1 Template:Macro
- 26.56%   10.531      3 Template:Code
- 14.13%    5.603      1 Template:MacroCode
+100.00%   10.141      1 -total
+ 43.17%    4.378      1 Template:Macro
+ 27.06%    2.744      1 Template:MacroCode
+ 26.34%    2.671      3 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135248 and revision id 1744360. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135317 and revision id 1744362. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
