Created page with "* Generare una copia offline aggiornata del manuale in qualsiasi momento * Creare formati PDF ed EPUB per diverse preferenze di lettura * Includere tutti gli ultimi contributi e aggiornamenti della community * Mantenere una formattazione e una qualità delle immagini corrette * Avere un riferimento completo anche senza accesso a Internet"

--- a/wiki/it/FreeCAD_Manual_Converter.html
+++ b/wiki/it/FreeCAD_Manual_Converter.html
@@ -2,7 +2,7 @@
 <li><a href="../de/FreeCAD_Manual_Converter.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD Handbuch-Konverter (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../FreeCAD_Manual_Converter.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="FreeCAD Manual Converter (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/FreeCAD_Manual_Converter.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD Manual Converter (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/FreeCAD_Manual_Converter.html" class="mw-pt-progress mw-pt-progress--complete" title="Konwerter Podr&#281;cznika FreeCAD (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -80,13 +80,11 @@ FreeCAD Manual Converter
 <h3><span class="mw-headline" id="Background">Background</span></h3>
 <p>Il <a href="../index.php?title=Manuale;Introduzione/it&amp;action=edit&amp;redlink=1.html" class="new" title="Manuale:Introduzione/it (page does not exist)">Manuale di FreeCAD</a> &egrave; un documento vivo, in continua evoluzione grazie ai contributi dei membri della comunit&agrave;. Sebbene ci&ograve; lo renda un'eccellente risorsa aggiornata, a volte gli utenti hanno bisogno di accedere al manuale offline o preferiscono leggerlo su e-reader e tablet. Questo script colma questa lacuna consentendo agli utenti di:
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>Generate an up-to-date offline copy of the manual at any time</li>
-<li>Create both PDF and EPUB formats for different reading preferences</li>
-<li>Include all the latest community contributions and updates</li>
-<li>Maintain proper formatting and image quality</li>
-<li>Have a complete reference even without internet access</li></ul>
-</div>
+<ul><li>Generare una copia offline aggiornata del manuale in qualsiasi momento</li>
+<li>Creare formati PDF ed EPUB per diverse preferenze di lettura</li>
+<li>Includere tutti gli ultimi contributi e aggiornamenti della community</li>
+<li>Mantenere una formattazione e una qualit&agrave; delle immagini corrette</li>
+<li>Avere un riferimento completo anche senza accesso a Internet</li></ul>
 <p><span id="Dependencies"></span>
 </p>
 <h2><span class="mw-headline" id="Dipendenze">Dipendenze</span></h2>
@@ -625,29 +623,29 @@ if __name__ == "__main__":
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126135451
+Cached time: 20260126135509
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.059 seconds
-Preprocessor visited node count: 142/1000000
+CPU time usage: 0.032 seconds
+Real time usage: 0.048 seconds
+Preprocessor visited node count: 141/1000000
 Post&#8208;expand include size: 2488/2097152 bytes
 Template argument size: 632/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 5/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 21463/5000000 bytes
+Unstrip post&#8208;expand size: 21467/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.636      1 -total
- 45.18%    6.613      1 Template:Macro/it
- 30.32%    4.438      3 Template:Code
- 21.73%    3.181      1 Template:MacroCode
+100.00%   10.188      1 -total
+ 44.97%    4.581      1 Template:Macro/it
+ 30.50%    3.107      3 Template:Code
+ 21.15%    2.155      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135451 and revision id 1744372. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135509 and revision id 1744374. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
